--- a/seminar11/seminar11.ipynb
+++ b/seminar11/seminar11.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "id": "-e37LxEUYyuF"
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -110,99 +110,99 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>longitude</th>\n",
        "      <th>latitude</th>\n",
-       "      <th>housingMedianAge</th>\n",
-       "      <th>totalRooms</th>\n",
-       "      <th>totalBedrooms</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
        "      <th>population</th>\n",
        "      <th>households</th>\n",
-       "      <th>medianIncome</th>\n",
-       "      <th>medianHouseValue</th>\n",
+       "      <th>median_income</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-114.31</td>\n",
-       "      <td>34.19</td>\n",
-       "      <td>15</td>\n",
-       "      <td>5612</td>\n",
-       "      <td>1283</td>\n",
-       "      <td>1015</td>\n",
-       "      <td>472</td>\n",
-       "      <td>1.4936</td>\n",
-       "      <td>66900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-117.66</td>\n",
+       "      <td>35.60</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1740</td>\n",
+       "      <td>391</td>\n",
+       "      <td>850</td>\n",
+       "      <td>317</td>\n",
+       "      <td>2.5812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-114.47</td>\n",
-       "      <td>34.40</td>\n",
-       "      <td>19</td>\n",
-       "      <td>7650</td>\n",
-       "      <td>1901</td>\n",
-       "      <td>1129</td>\n",
-       "      <td>463</td>\n",
-       "      <td>1.8200</td>\n",
-       "      <td>80100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-117.07</td>\n",
+       "      <td>32.71</td>\n",
+       "      <td>26</td>\n",
+       "      <td>4151</td>\n",
+       "      <td>823</td>\n",
+       "      <td>2822</td>\n",
+       "      <td>697</td>\n",
+       "      <td>2.8372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-114.56</td>\n",
-       "      <td>33.69</td>\n",
-       "      <td>17</td>\n",
-       "      <td>720</td>\n",
-       "      <td>174</td>\n",
-       "      <td>333</td>\n",
-       "      <td>117</td>\n",
-       "      <td>1.6509</td>\n",
-       "      <td>85700</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-117.91</td>\n",
+       "      <td>33.61</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1797</td>\n",
+       "      <td>343</td>\n",
+       "      <td>435</td>\n",
+       "      <td>203</td>\n",
+       "      <td>5.9196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-114.57</td>\n",
-       "      <td>33.64</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1501</td>\n",
-       "      <td>337</td>\n",
-       "      <td>515</td>\n",
-       "      <td>226</td>\n",
-       "      <td>3.1917</td>\n",
-       "      <td>73400</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-117.19</td>\n",
+       "      <td>34.05</td>\n",
+       "      <td>33</td>\n",
+       "      <td>3007</td>\n",
+       "      <td>498</td>\n",
+       "      <td>1252</td>\n",
+       "      <td>488</td>\n",
+       "      <td>3.8816</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-114.57</td>\n",
-       "      <td>33.57</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1454</td>\n",
-       "      <td>326</td>\n",
-       "      <td>624</td>\n",
-       "      <td>262</td>\n",
-       "      <td>1.9250</td>\n",
-       "      <td>65500</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-119.58</td>\n",
+       "      <td>36.83</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6135</td>\n",
+       "      <td>863</td>\n",
+       "      <td>2473</td>\n",
+       "      <td>774</td>\n",
+       "      <td>5.4895</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   longitude  latitude  housingMedianAge  totalRooms  totalBedrooms  \\\n",
-       "0    -114.31     34.19                15        5612           1283   \n",
-       "1    -114.47     34.40                19        7650           1901   \n",
-       "2    -114.56     33.69                17         720            174   \n",
-       "3    -114.57     33.64                14        1501            337   \n",
-       "4    -114.57     33.57                20        1454            326   \n",
+       "   Unnamed: 0  longitude  latitude  housing_median_age  total_rooms  \\\n",
+       "0           1    -117.66     35.60                  14         1740   \n",
+       "1           2    -117.07     32.71                  26         4151   \n",
+       "2           3    -117.91     33.61                  27         1797   \n",
+       "3           4    -117.19     34.05                  33         3007   \n",
+       "4           5    -119.58     36.83                  13         6135   \n",
        "\n",
-       "   population  households  medianIncome  medianHouseValue  \n",
-       "0        1015         472        1.4936             66900  \n",
-       "1        1129         463        1.8200             80100  \n",
-       "2         333         117        1.6509             85700  \n",
-       "3         515         226        3.1917             73400  \n",
-       "4         624         262        1.9250             65500  "
+       "   total_bedrooms  population  households  median_income  \n",
+       "0             391         850         317         2.5812  \n",
+       "1             823        2822         697         2.8372  \n",
+       "2             343         435         203         5.9196  \n",
+       "3             498        1252         488         3.8816  \n",
+       "4             863        2473         774         5.4895  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,17 +1913,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1)Прочесть с помощью pandas файл california_housing_test.csv \n",
+    "\n",
     "import pandas as pd\n",
     "df = pd.read_csv('california_housing_test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1932,145 +1934,20 @@
        "(3402, 9)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 2)Посмотреть сколько в нем строк и столбцов\n",
+    "\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>housing_median_age</th>\n",
-       "      <th>total_rooms</th>\n",
-       "      <th>total_bedrooms</th>\n",
-       "      <th>population</th>\n",
-       "      <th>households</th>\n",
-       "      <th>median_income</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-117.66</td>\n",
-       "      <td>35.60</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1740</td>\n",
-       "      <td>391</td>\n",
-       "      <td>850</td>\n",
-       "      <td>317</td>\n",
-       "      <td>2.5812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-117.07</td>\n",
-       "      <td>32.71</td>\n",
-       "      <td>26</td>\n",
-       "      <td>4151</td>\n",
-       "      <td>823</td>\n",
-       "      <td>2822</td>\n",
-       "      <td>697</td>\n",
-       "      <td>2.8372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>-117.91</td>\n",
-       "      <td>33.61</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1797</td>\n",
-       "      <td>343</td>\n",
-       "      <td>435</td>\n",
-       "      <td>203</td>\n",
-       "      <td>5.9196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>-117.19</td>\n",
-       "      <td>34.05</td>\n",
-       "      <td>33</td>\n",
-       "      <td>3007</td>\n",
-       "      <td>498</td>\n",
-       "      <td>1252</td>\n",
-       "      <td>488</td>\n",
-       "      <td>3.8816</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>-119.58</td>\n",
-       "      <td>36.83</td>\n",
-       "      <td>13</td>\n",
-       "      <td>6135</td>\n",
-       "      <td>863</td>\n",
-       "      <td>2473</td>\n",
-       "      <td>774</td>\n",
-       "      <td>5.4895</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  longitude  latitude  housing_median_age  total_rooms  \\\n",
-       "0           1    -117.66     35.60                  14         1740   \n",
-       "1           2    -117.07     32.71                  26         4151   \n",
-       "2           3    -117.91     33.61                  27         1797   \n",
-       "3           4    -117.19     34.05                  33         3007   \n",
-       "4           5    -119.58     36.83                  13         6135   \n",
-       "\n",
-       "   total_bedrooms  population  households  median_income  \n",
-       "0             391         850         317         2.5812  \n",
-       "1             823        2822         697         2.8372  \n",
-       "2             343         435         203         5.9196  \n",
-       "3             498        1252         488         3.8816  \n",
-       "4             863        2473         774         5.4895  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2088,19 +1965,23 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 3)Определить какой тип данных имеют столбцы\n",
+    "\n",
     "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 68,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2123,29 +2004,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>housing_median_age</th>\n",
+       "      <th>longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>14</td>\n",
+       "      <td>-117.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>26</td>\n",
+       "      <td>-117.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>27</td>\n",
+       "      <td>-117.91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>33</td>\n",
+       "      <td>-117.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13</td>\n",
+       "      <td>-119.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2153,23 +2034,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3392</th>\n",
-       "      <td>18</td>\n",
+       "      <td>-122.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3393</th>\n",
-       "      <td>2</td>\n",
+       "      <td>-117.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3395</th>\n",
-       "      <td>17</td>\n",
+       "      <td>-117.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3398</th>\n",
-       "      <td>29</td>\n",
+       "      <td>-117.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3399</th>\n",
-       "      <td>32</td>\n",
+       "      <td>-118.32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2177,34 +2058,36 @@
        "</div>"
       ],
       "text/plain": [
-       "      housing_median_age\n",
-       "0                     14\n",
-       "1                     26\n",
-       "2                     27\n",
-       "3                     33\n",
-       "4                     13\n",
-       "...                  ...\n",
-       "3392                  18\n",
-       "3393                   2\n",
-       "3395                  17\n",
-       "3398                  29\n",
-       "3399                  32\n",
+       "      longitude\n",
+       "0       -117.66\n",
+       "1       -117.07\n",
+       "2       -117.91\n",
+       "3       -117.19\n",
+       "4       -119.58\n",
+       "...         ...\n",
+       "3392    -122.10\n",
+       "3393    -117.52\n",
+       "3395    -117.01\n",
+       "3398    -117.88\n",
+       "3399    -118.32\n",
        "\n",
        "[2216 rows x 1 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df['housing_median_age'] < 35, ['housing_median_age']]"
+    "# 4)Показать longitude где housing_median_age < 35\n",
+    "\n",
+    "df.loc[df['housing_median_age'] < 35, ['longitude']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2310,18 +2193,20 @@
        "[3402 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 5)Показать столбцы longitude и latitude\n",
+    "\n",
     "df[['longitude','latitude']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2524,21 +2409,82 @@
        "[106 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 6)Выбрать данные где total_rooms < 2000 и population > 1500\n",
+    "\n",
     "df[(df['total_rooms'] < 2000) & (df['population'] > 1500)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Максимальное значение population:  35682\n",
+      "Минимальное значение population:  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7)Определить какое максимальное и минимальное значение **population**\n",
+    "\n",
+    "# Максимальное значение\n",
+    "print('Максимальное значение population: ', df['population'].max())\n",
+    "# Минимальное значение\n",
+    "print('Минимальное значение population: ', df['population'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-115.37"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 8) Показать максимальное **longitude**, где **median_income** > 3\n",
+    "\n",
+    "df.loc[df['median_income'] > 3, ['longitude']].max()['longitude']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 9)(Доп) Узнать какая максимальная **total_bedrooms** при минимальном значении **households**\n",
+    "df[df['households'] == df['households'].min()]['total_bedrooms'].max()"
+   ]
   }
  ],
  "metadata": {
@@ -2562,7 +2508,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
